c2rust/c2rust-transpile/tests/snapshots/snapshots__transpile@main_fn.c.2024.clang15.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/main_fn.2024.clang15.rs
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unsafe_op_in_unsafe_fn,
    unused_assignments,
    unused_mut
)]
use ::std::process::ExitCode;
unsafe fn main_0(
    mut argc: ::core::ffi::c_int,
    mut argv: *mut *mut u8,
    mut envp: *mut *mut u8,
) -> ::core::ffi::c_int {
    return 0 as ::core::ffi::c_int;
}
pub fn main() -> ExitCode {
    let mut args_strings: Vec<Vec<u8>> = ::std::env::args()
        .map(|arg| {
            ::std::ffi::CString::new(arg)
                .expect("Failed to convert argument into CString.")
                .into_bytes_with_nul()
        })
        .collect();
    let mut args_ptrs: Vec<*mut ::core::ffi::c_char> = args_strings
        .iter_mut()
        .map(|arg| arg.as_mut_ptr() as *mut ::core::ffi::c_char)
        .chain(::core::iter::once(::core::ptr::null_mut()))
        .collect();
    let argc = (args_ptrs.len() - 1) as ::core::ffi::c_int;
    let argv = args_ptrs.as_mut_ptr() as *mut *mut u8;
    let mut vars: Vec<*mut ::core::ffi::c_char> = Vec::new();
    for (var_name, var_value) in ::std::env::vars() {
        let var: String = format!("{}={}", var_name, var_value);
        vars.push(
            ::std::ffi::CString::new(var)
                .expect("Failed to convert environment variable into CString.")
                .into_raw(),
        );
    }
    vars.push(::core::ptr::null_mut());
    unsafe { ExitCode::from(main_0(argc, argv, vars.as_mut_ptr() as *mut *mut u8) as u8) }
}
