c2rust/c2rust-transpile/tests/snapshots/snapshots__transpile@predefined.c.2024.clang15.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/predefined.2024.clang15.rs
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unsafe_op_in_unsafe_fn,
    unused_assignments,
    unused_mut
)]
#[unsafe(no_mangle)]
pub unsafe extern "C" fn predefined() {
    let mut line: ::core::ffi::c_int = 2 as ::core::ffi::c_int;
    let mut file_name: *const u8 = b"predefined.c\0".as_ptr() as *const u8;
    let mut func: *const u8 = b"predefined\0".as_ptr() as *const u8;
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn extension_operator() -> *const u8 {
    return b"const char *extension_operator()\0".as_ptr() as *const u8;
}
